[package]
name = "efflux-indexd"
version = "0.1.0"
edition = "2021"
authors = ["EFFLUX Contributors"]
description = "Indexing daemon for semantic file search in EFFLUX"
license = "MIT OR Apache-2.0"

[dependencies]
spin = "0.9"
efflux-hnsw = { path = "../efflux-hnsw" }
efflux-embed = { path = "../efflux-embed" }

[features]
default = []
std = []
