[package]
name = "efflux-mm-paging"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
efflux-core = { workspace = true }
efflux-mm-traits = { workspace = true }
bitflags = { workspace = true }
efflux-arch-traits = { workspace = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
efflux-arch-x86_64 = { workspace = true }
