[package]
name = "mm-paging"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
os_core = { workspace = true }
mm-traits = { workspace = true }
bitflags = { workspace = true }
arch-traits = { workspace = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
arch-x86_64 = { workspace = true }
