[package]
name = "efflux-proc"
version = "0.1.0"
edition = "2024"

[dependencies]
efflux-core = { path = "../../core/efflux-core" }
efflux-proc-traits = { path = "../efflux-proc-traits" }
efflux-mm-paging = { path = "../../mm/efflux-mm-paging" }
efflux-mm-traits = { path = "../../mm/efflux-mm-traits" }
efflux-mm-cow = { path = "../../mm/efflux-mm-cow" }
efflux-elf = { path = "../../exec/efflux-elf" }
efflux-sched-traits = { path = "../../sched/efflux-sched-traits" }
spin = "0.9"
