[package]
name = "efflux-syscall"
version = "0.1.0"
edition = "2024"

[dependencies]
efflux-core = { path = "../../core/efflux-core" }
efflux-proc = { path = "../../proc/efflux-proc" }
efflux-proc-traits = { path = "../../proc/efflux-proc-traits" }
efflux-mm-traits = { path = "../../mm/efflux-mm-traits" }
efflux-vfs = { path = "../../vfs/efflux-vfs" }
efflux-signal = { path = "../../signal/efflux-signal" }
efflux-net = { path = "../../net/efflux-net" }
spin = "0.9"
