[package]
name = "syscall"
version = "0.1.0"
edition = "2024"

[dependencies]
os_core = { path = "../../core/os_core" }
proc = { path = "../../proc/proc" }
proc-traits = { path = "../../proc/proc-traits" }
mm-traits = { path = "../../mm/mm-traits" }
mm-frame = { path = "../../mm/mm-frame" }
vfs = { path = "../../vfs/vfs" }
signal = { path = "../../signal/signal" }
net = { path = "../../net/net" }
tcpip = { path = "../../net/tcpip" }
input = { path = "../../input/input" }
mmap = { path = "../../libc-support/mmap" }
crypto = { path = "../../security/crypto" }
spin = "0.9"
