[package]
name = "syscall"
version = "0.1.0"
edition = "2024"

[features]
default = []
debug-sched = []  # Enable scheduler debug output in sleep/wake paths

[dependencies]
os_core = { path = "../../core/os_core" }
proc = { path = "../../proc/proc" }
proc-traits = { path = "../../proc/proc-traits" }
mm-traits = { path = "../../mm/mm-traits" }
mm-manager = { path = "../../mm/mm-manager" }
vfs = { path = "../../vfs/vfs" }
signal = { path = "../../signal/signal" }
net = { path = "../../net/net" }
tcpip = { path = "../../net/tcpip" }
input = { path = "../../input/input" }
mmap = { path = "../../libc-support/mmap" }
crypto = { path = "../../security/crypto" }
arch-x86_64 = { path = "../../arch/arch-x86_64" }
sched = { path = "../../sched/sched" }
sched-traits = { path = "../../sched/sched-traits" }
spin = "0.9"
