[package]
name = "tty"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TTY subsystem for OXIDE OS"

[features]
debug-tty-read = []

[dependencies]
vfs = { workspace = true }
os_core = { workspace = true }
signal = { workspace = true }
spin = { workspace = true }
bitflags = { workspace = true }
sched = { workspace = true }
arch-x86_64 = { path = "../../arch/arch-x86_64" }
