[package]
name = "devfs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Device filesystem for OXIDE OS"

[features]
default = []
debug-console = []  # Enable console I/O path tracing

[dependencies]
vfs = { workspace = true }
os_core = { workspace = true }
spin = { workspace = true }
terminal = { workspace = true }
sched = { workspace = true }
tty = { workspace = true }
input = { workspace = true }
