[package]
name = "procfs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Process filesystem for EFFLUX OS"

[dependencies]
vfs = { workspace = true }
proc = { workspace = true }
proc-traits = { workspace = true }
os_core = { workspace = true }
spin = { workspace = true }
