[package]
name = "arch-x86_64"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
debug-input = []
debug-pagefault = []
debug-timer = []

[dependencies]
os_core = { workspace = true }
arch-traits = { workspace = true }
sched-traits = { workspace = true }
boot-proto = { workspace = true }
ps2 = { workspace = true }
spin = { workspace = true }

[build-dependencies]
cc = "1.0"
