[package]
name = "arch-x86_64"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
debug-input = []
debug-pagefault = []
debug-timer = []
debug-perf = []  # Enable per-ISR PERF-WARN messages (53 bytes each, fires hundreds/sec under load — feedback loop)
debug-sched = []  # Enable scheduler/signal debug traces in syscall return path

[dependencies]
os_core = { workspace = true }
os_log = { workspace = true }
perf = { path = "../../perf" }
arch-traits = { workspace = true }
sched-traits = { workspace = true }
boot-proto = { workspace = true }
ps2 = { workspace = true }
spin = { workspace = true }

[build-dependencies]
cc = "1.0"
