[package]
name = "oxidefs"
version = "0.1.0"
edition = "2024"

[dependencies]
block = { path = "../../block/block" }
vfs = { path = "../../vfs/vfs" }
spin = "0.10"

# Optional dependencies for kernel integration
proc = { path = "../../proc/proc", optional = true }
sched = { path = "../../sched/sched", optional = true }
os_core = { path = "../../core/os_core", optional = true }

[features]
default = ["kernel"]
kernel = ["proc", "sched", "os_core"]
