[package]
name = "mm-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
os_core = { workspace = true }
mm-traits = { workspace = true }
spin = { workspace = true }
log = { workspace = true }
bitflags = { workspace = true }
arch-x86_64 = { path = "../../arch/arch-x86_64" }
