[package]
name = "mm-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
debug-buddy = []

[dependencies]
os_core = { workspace = true }
mm-traits = { workspace = true }
spin = { workspace = true }
log = { workspace = true }
bitflags = { workspace = true }
os_log = { path = "../../core/os_log" }
mm-pagedb = { path = "../mm-pagedb" }
