[package]
name = "mm-heap"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
heap-hardening = []  # Enable heap hardening (guard pages, redzones, canaries)
debug-heap = []      # Enable debug output for heap operations

[dependencies]
os_core = { workspace = true }
os_log = { workspace = true }
spin = { workspace = true }
