[package]
name = "mm-manager"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
debug-mmap = []
debug-buddy = ["mm-core/debug-buddy"]

[dependencies]
os_core = { workspace = true }
mm-traits = { workspace = true }
mm-core = { workspace = true }
spin = { workspace = true }
log = { workspace = true }
